hanu-reference/service-mesh/servicemesh-kiali-resource/Ingress_Kiali.yaml
---
# Source: servicemesh-kiali-resource/templates/kiali-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: Kiali
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: kiali.k2-node01
      http:
        paths:
        - backend:
            service:
              name: kiali
              port:
                number: 20001
          path: /
          pathType: Prefix
